--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
       illo, labore molestiae doloribus aliquid voluptates quia tempore quasi
       iure in!
     </p>
+
+    <img src="https://avatars.githubusercontent.com/u/66411865?v=4" alt="">
   </body>
 </html>
