--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ducimus
       consequatur iusto officia cumque, suscipit rerum vero eaque repellat,
       illo, labore molestiae doloribus aliquid voluptates quia tempore quasi
-      iure in!
+      iure in!  pull
     </p>
-
+<div><h3>New blog </h3>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis incidunt numquam tenetur reprehenderit soluta eaque, ipsa quisquam doloremque ad debitis rerum, maiores explicabo accusantium voluptatibus inventore libero. Minima, iste repellat!</p>
+</div>
     <img src="https://avatars.githubusercontent.com/u/66411865?v=4" alt="">
   </body>
 </html>
