amma in my code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>mama I can code now New REPROSITORY</h2>
+    <h2>Amma jan I can code !mama I can code now New REPROSITORY</h2>
 
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ducimus
